--- a/src/components/elements/loader.module.css
+++ b/src/components/elements/loader.module.css
@@ -1,6 +1,5 @@
 .loader {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: calc(100vh - 88px);
+    justify-content: center;;
 }
