--- a/src/components/burger-ingredients/details.module.css
+++ b/src/components/burger-ingredients/details.module.css
@@ -1,3 +1,11 @@
+.wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .details {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
