--- a/src/components/burger-ingredients/item.module.css
+++ b/src/components/burger-ingredients/item.module.css
@@ -8,6 +8,12 @@
     min-height: 165px;
 }
 
+.link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .price {
     font-family: Iceland, cursive;
     font-size: 28px;
